--- a/QKD.ipynb
+++ b/QKD.ipynb
@@ -11,16 +11,16 @@
     "<table>\n",
     "    <tr>\n",
     "      <td>\n",
-    "      <img src='https://www.pngitem.com/pimgs/m/432-4321754_eu-logo-european-union-hd-png-download.png' width=450>\n",
-    "      </td>\n",
-    "      <td>\n",
-    "      <img src='https://www.ideal-ist.eu/sites/default/files/2018-10/logo_quantum_flagship.jpg' width=510>\n",
+    "      <img src='https://www.akc.ac.cy/images/2022/03/Funded-by-the-European-Union.png' width=450>\n",
     "      </td>\n",
     "      <td>\n",
     "      <img src='https://newsroom.unl.edu/announce/files/file143411.jpg' width=310>\n",
     "      </td>\n",
+    "      <td>\n",
+    "      <img src='https://www.akc.ac.cy/images/2022/03/Funded-by-the-European-Union.png' width=450>\n",
+    "      </td>\n",
     "     </tr>\n",
-    "</table>\n",
+    "</table>\n",    
     "\n",
     "<div style=\"text-align: center; margin: 50px\">\n",
     "\n",
