--- a/QKD.ipynb
+++ b/QKD.ipynb
@@ -11,7 +11,7 @@
     "<table>\n",
     "    <tr>\n",
     "      <td>\n",
-    "      <img src='https://www.akc.ac.cy/images/2022/03/Funded-by-the-European-Union.png' width=450>\n",
+    "      <img src='https://www.ideal-ist.eu/sites/default/files/2018-10/logo_quantum_flagship.jpg' width=450>\n",
     "      </td>\n",
     "      <td>\n",
     "      <img src='https://newsroom.unl.edu/announce/files/file143411.jpg' width=310>\n",
