--- a/QKD.ipynb
+++ b/QKD.ipynb
@@ -27,7 +27,7 @@
     "<h1 style=\"text-align: center;\"><a href=\"https://qtom.qtedu.eu/shared-course/qtom-fridays-a-trip-through-the-world-of-quantum-technology/\">QTOM Fridays – A trip through the world of Quantum Technology</a></h1> \n",
     "<h2 style=\"text-align: center;\">Summer Semester 2022</h2>\n",
     "<h2 style=\"text-align: center;\"><a href=\"https://qt.eu/\">European Union Quantum Flagship /</a> <a href=\"https://qtom.qtedu.eu/\">QTEdu Quantum Technology Open Master</a></h2>\n",
-    "<h2 style=\"text-align: center;\">IBM Quantum</h2>\n",
+    "<h2 style=\"text-align: center;\"><a href=\"https://www.ibm.com/quantum/\">IBM Quantum </a></h2>\n",
     "<h3>Exercise Set 7: <em>Quantum Key Distribution</em>.</h3>\n",
     "<h3>Anastasiia Andriievska</h3>\n",
     "\n",
